# bases

./: README.md  bases-app.desktop  bases.desktop  pyproject.toml  requirements.txt
bases_app/: __main__.py  ui.py
src/bases_app/: __init__.py  converter.py  ui.py
tests/: test_converter.py
